# gdg-roboticsresources

./: README.md
circuit challenges/: README.md
circuit challenges/#1 - LED Randomizer/: Overview.md
circuit challenges/#2 - Ultrasonic Sensor Response/: Overview.md
circuit_challenges/: README.md
circuit_challenges/chal1_ledrandomizer/: Overview.md
drone build/: README.md
drone build/docs/: drone_colored.urdf
drone build/drone_simulation/arduino/: dronesim_arduino.ino
drone build/drone_simulation/esp32/: dronesim_esp32.ino
drone build/drone_simulation/raspberry_pi/: CMakeLists.txt  drone_pybulletvisual.py  main.c  mpu6050.c  mpu6050.h
intro to robotics/: README.md
week1_ultrasonic_sensor/: README.md  ultrasonic _basic.ino
wk2 (ultrasonic sensor)/: README.md
